--- a/website/maryliseScroller/index.html
+++ b/website/maryliseScroller/index.html
@@ -22,9 +22,9 @@ var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 
 
-var victoires = ['e','m','m','o','o','o','o','o','o','o','o','e','o','e','o','o','o','o','o','e','e','e','m','m','e','m','o','m','e','e','m','o','o','o','e','m','o','m','m','m','m','e','o','m','e','o','o','m','e','m','m','m','e','o','m','e','e','m','m','m','e','m','e','m','m','e','e','o','m','e','e','o','m','e','o','e','m','e','e','m','m','m',];
-var tot_essais_M = 333;
-var tot_essais_O = 357;
+var victoires = ['e','m','m','o','o','o','o','o','o','o','o','e','o','e','o','o','o','o','o','e','e','e','m','m','e','m','o','m','e','e','m','o','o','o','e','m','o','m','m','m','m','e','o','m','e','o','o','m','e','m','m','m','e','o','m','e','e','m','m','m','e','m','e','m','m','e','e','o','m','e','e','o','m','e','o','e','m','e','e','m','m','m','m',];
+var tot_essais_M = 337;
+var tot_essais_O = 362;
 
 
 var mode = "default";
